--- a/package.xml
+++ b/package.xml
@@ -34,7 +34,7 @@
             </dir>
         </filelist> 
         <deps>
-            <dep type="php" rel="ge">4.3.0</dep>
+            <dep type="php" rel="ge" version="4.3.0" />
         </deps>
     </release>
 </package>
