--- a/package.xml
+++ b/package.xml
@@ -19,11 +19,12 @@
         </maintainer>
     </maintainers>
     <release>
-        <version>1.0</version>
-        <date>2003-10-31</date>
+        <version>1.1.0</version>
+        <date>2004-03-34</date>
         <state>stable</state>
         <notes>
-			         Initial Release in PECL
+Complete rework. Many old function has been removed. Font and image
+handling is working with memory leaks.
         </notes>
         <filelist>
             <dir role="src" name="/">
@@ -43,4 +44,14 @@
             <dep type="php" rel="ge" version="4.3.0" />
         </deps>
     </release>
+    <changelog>
+        <release>
+            <state>stable</state>
+            <version>1.0</version>
+            <date>2003-02-15</date>
+            <notes>
+Initial Release in PECL
+            </notes>
+        </release>
+    </changelog>
 </package>
