- prepare for new release

--- a/package.xml
+++ b/package.xml
@@ -1,57 +1,53 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<!-- do not use the "Type" attribute here, that one is only for
-     generated package.xml files -->
-<package>
-    <name>ps</name>
-    <summary>An extension to create PostScript files</summary>
-    <description>
-        ps is an extension similar to the pdf extension but for
-        creating PostScript files. Its api is modelled after the
-        pdf extension.
-	   </description>
+<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
+<package version="1.0">
+  <name>ps</name>
+  <summary>An extension to create PostScript files</summary>
+  <description>ps is an extension similar to the pdf extension but for creating PostScript files. Its api is modelled after the pdf extension.</description>
+  <maintainers>
+    <maintainer>
+      <user>steinm</user>
+      <name>Uwe Steinmann</name>
+      <email>steinm@php.net</email>
+      <role>lead</role>
+    </maintainer>
+  </maintainers>
+  <release>
+    <version>1.1.1</version>
+    <date>2004-04-21</date>
     <license>PHP License</license>
-    <maintainers>
-        <maintainer>
-            <user>steinm</user>
-            <name>Uwe Steinmann</name>
-            <email>steinm@php.net</email>
-            <role>lead</role>
-        </maintainer>
-    </maintainers>
+    <state>stable</state>
+    <notes>Added new function PS_hyphenate().</notes>
+    <deps>
+      <dep type="php" rel="ge" version="4.3.0"/>
+    </deps>
+    <filelist>
+      <file role="doc" name="CREDITS"/>
+      <file role="src" name="config.m4"/>
+      <file role="doc" name="php_ps.h"/>
+      <file role="src" name="ps.c"/>
+      <file role="doc" baseinstalldir="/" name="examples/Dustismo.pfb"/>
+      <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
+      <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
+      <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+    </filelist>
+  </release>
+  <changelog>
     <release>
-        <version>1.1.0</version>
-        <date>2004-03-34</date>
-        <state>stable</state>
-        <notes>
-Complete rework. Many old function has been removed. Font and image
-handling is now working without memory leaks.
-        </notes>
-        <filelist>
-            <dir role="src" name="/">
-                <file role="doc">CREDITS</file>
-                <file role="src">config.m4</file>
-                <file role="doc">php_ps.h</file>
-                <file role="src">ps.c</file>
-            </dir>
-            <dir name="examples" role="doc" baseinstalldir="/">
-                <file>Dustismo.pfb</file>
-                <file>Dustismo.afm</file>
-                <file>psclock.php</file>
-	               <file>text.php</file>
-            </dir>
-        </filelist> 
-        <deps>
-            <dep type="php" rel="ge" version="4.3.0" />
-        </deps>
+      <version>1.1.0</version>
+      <date>2004-03-34</date>
+      <license>PHP License</license>
+      <state>stable</state>
+      <notes>Complete rework. Many old function has been removed. Font and image
+  handling is now working without memory leaks.</notes>
     </release>
-    <changelog>
-        <release>
-            <state>stable</state>
-            <version>1.0</version>
-            <date>2003-02-15</date>
-            <notes>
-Initial Release in PECL
-            </notes>
-        </release>
-    </changelog>
+    <release>
+      <version>1.0</version>
+      <date>2003-02-15</date>
+      <state>stable</state>
+      <notes>Initial Release in PECL
+            
+</notes>
+    </release>
+  </changelog>
 </package>
