--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.1.1</version>
-    <date>2004-04-21</date>
+    <version>1.1.2</version>
+    <date>2004-04-26</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Added new function PS_hyphenate().</notes>
+    <notes>Added new function PS_string_geometry().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.0"/>
     </deps>
@@ -30,9 +30,31 @@
       <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
       <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
       <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+      <file role="test" name="tests/001.phpt"/>
     </filelist>
   </release>
   <changelog>
+    <release>
+      <version>1.1.1</version>
+      <date>2004-04-21</date>
+      <license>PHP License</license>
+      <state>stable</state>
+      <notes>Added new function PS_hyphenate().</notes>
+      <deps>
+        <dep type="php" rel="ge" version="4.3.0"/>
+      </deps>
+      <filelist>
+        <file role="doc" name="CREDITS"/>
+        <file role="src" name="config.m4"/>
+        <file role="doc" name="php_ps.h"/>
+        <file role="src" name="ps.c"/>
+        <file role="doc" baseinstalldir="/" name="examples/Dustismo.pfb"/>
+        <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
+        <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
+        <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+        <file role="test" name="tests/001.phpt"/>
+      </filelist>
+    </release>
     <release>
       <version>1.1.0</version>
       <date>2004-03-34</date>
