--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,8 @@
     <date>2004-04-26</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Added new function PS_string_geometry().</notes>
+    <notes>Added new function ps_string_geometry(), ps_set_text_pos(),
+ps_symbol(), ps_symbol_name(), ps_symbol_width().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.0"/>
     </deps>
