--- a/package.xml
+++ b/package.xml
@@ -13,12 +13,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.2.1</version>
+    <version>1.2.2</version>
     <date>2004-06-02</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>ps_hyphenate() did not return an array but true. Added more tests
-      and examples. Many internal changes.</notes>
+    <notes>Added function ps_makespotcolor().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.0"/>
     </deps>
@@ -48,6 +47,41 @@
     </filelist>
   </release>
   <changelog>
+   <release>
+     <version>1.2.1</version>
+     <date>2004-06-02</date>
+     <license>PHP License</license>
+     <state>stable</state>
+     <notes>ps_hyphenate() did not return an array but true. Added more tests
+       and examples. Many internal changes.</notes>
+     <deps>
+       <dep type="php" rel="ge" version="4.3.0"/>
+     </deps>
+     <filelist>
+       <file role="doc" name="CREDITS"/>
+       <file role="src" name="config.m4"/>
+       <file role="doc" name="php_ps.h"/>
+       <file role="src" name="ps.c"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/draw.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/debian.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/picture.eps"/>
+       <file role="doc" baseinstalldir="/" name="examples/Helvetica.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
+       <file role="doc" baseinstalldir="/" name="examples/fontsample.php"/>
+       <file role="test" name="tests/001.phpt"/>
+       <file role="test" name="tests/002.phpt"/>
+       <file role="test" name="tests/003.phpt"/>
+       <file role="test" name="tests/004.phpt"/>
+       <file role="test" name="tests/005.phpt"/>
+       <file role="test" name="tests/hyph_de.dic"/>
+     </filelist>
+   </release>
    <release>
      <version>1.2.0</version>
      <date>2004-04-26</date>
