--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.2.2</version>
-    <date>2004-06-02</date>
+    <version>1.3.0</version>
+    <date>2004-07-27</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Added function ps_makespotcolor().</notes>
+    <notes>Added function ps_shfill(), ps_shading(), ps_shading_pattern(), ps_get_buffer(). New example file shading.php. Renamed undocumented function ps_setoverprint() to ps_setoverprintmode(). </notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.0"/>
     </deps>
@@ -39,6 +39,7 @@
       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
       <file role="doc" baseinstalldir="/" name="examples/fontsample.php"/>
       <file role="doc" baseinstalldir="/" name="examples/spotcolor.php"/>
+      <file role="doc" baseinstalldir="/" name="examples/shading.php"/>
       <file role="test" name="tests/001.phpt"/>
       <file role="test" name="tests/002.phpt"/>
       <file role="test" name="tests/003.phpt"/>
@@ -48,6 +49,41 @@
     </filelist>
   </release>
   <changelog>
+   <release>
+     <version>1.2.2</version>
+     <date>2004-06-02</date>
+     <license>PHP License</license>
+     <state>stable</state>
+     <notes>Added function ps_makespotcolor().</notes>
+     <deps>
+       <dep type="php" rel="ge" version="4.3.0"/>
+     </deps>
+     <filelist>
+       <file role="doc" name="CREDITS"/>
+       <file role="src" name="config.m4"/>
+       <file role="doc" name="php_ps.h"/>
+       <file role="src" name="ps.c"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/draw.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/debian.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/picture.eps"/>
+       <file role="doc" baseinstalldir="/" name="examples/Helvetica.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
+       <file role="doc" baseinstalldir="/" name="examples/fontsample.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/spotcolor.php"/>
+       <file role="test" name="tests/001.phpt"/>
+       <file role="test" name="tests/002.phpt"/>
+       <file role="test" name="tests/003.phpt"/>
+       <file role="test" name="tests/004.phpt"/>
+       <file role="test" name="tests/005.phpt"/>
+       <file role="test" name="tests/hyph_de.dic"/>
+     </filelist>
+   </release>
    <release>
      <version>1.2.1</version>
      <date>2004-06-02</date>
