--- a/package.xml
+++ b/package.xml
@@ -14,10 +14,10 @@
   </maintainers>
   <release>
     <version>1.3.4</version>
-    <date>2005-12-06</date>
+    <date>2006-04-21</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Made ps_arcn() available. ps_set_border_dash() checks now for 3 parameters instead of 4. Added some more examples.</notes>
+    <notes>Made ps_arcn() available. ps_set_border_dash() checks now for 3 parameters instead of 4. Fixed segm fault when the optional parameter of ps_show_boxed() is not passed. Added some more examples.</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.10"/>
     </deps>
