--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,11 @@
     </maintainer>
   </maintainers>
   <release>
-    <version>1.3.4</version>
-    <date>2006-04-21</date>
+    <version>1.3.5</version>
+    <date>2007-07-02</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Made ps_arcn() available. ps_set_border_dash() checks now for 3 parameters instead of 4. Fixed segm fault when the optional parameter of ps_show_boxed() is not passed. Added some more examples. New function ps_include_file().</notes>
+    <notes>Test for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.10"/>
     </deps>
@@ -62,6 +62,54 @@
     </filelist>
   </release>
   <changelog>
+   <release>
+     <version>1.3.4</version>
+     <date>2006-04-21</date>
+     <license>PHP License</license>
+     <state>stable</state>
+     <notes>Made ps_arcn() available. ps_set_border_dash() checks now for 3 parameters instead of 4. Fixed segm fault if the optional parameter of ps_show_boxed() is not passed. Added some more examples.</notes>
+     <deps>
+       <dep type="php" rel="ge" version="4.3.10"/>
+     </deps>
+     <configureoptions>
+       <configureoption name="with-ps" prompt="path to pslib installation?"/>
+     </configureoptions>
+     <filelist>
+       <file role="doc" name="CREDITS"/>
+       <file role="src" name="config.m4"/>
+       <file role="src" name="php_ps.h"/>
+       <file role="src" name="ps.c"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/Dustismo.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/psclock.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/text.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/draw.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.pfb"/>
+       <file role="doc" baseinstalldir="/" name="examples/dice.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/debian.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/exiftest.jpg"/>
+       <file role="doc" baseinstalldir="/" name="examples/indexed-alpha.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/indexed.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/rgb.png"/>
+       <file role="doc" baseinstalldir="/" name="examples/gnu-head.jpg"/>
+       <file role="doc" baseinstalldir="/" name="examples/picture.eps"/>
+       <file role="doc" baseinstalldir="/" name="examples/Helvetica.afm"/>
+       <file role="doc" baseinstalldir="/" name="examples/Helvetica.pro"/>
+       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
+       <file role="doc" baseinstalldir="/" name="examples/fontsample.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/spotcolor.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/shading.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/image.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/overprint.php"/>
+       <file role="doc" baseinstalldir="/" name="examples/hyperlinks.php"/>
+       <file role="test" name="tests/001.phpt"/>
+       <file role="test" name="tests/002.phpt"/>
+       <file role="test" name="tests/003.phpt"/>
+       <file role="test" name="tests/004.phpt"/>
+       <file role="test" name="tests/005.phpt"/>
+       <file role="test" name="tests/hyph_de.dic"/>
+     </filelist>
+   </release>
    <release>
      <version>1.3.3</version>
      <date>2005-12-06</date>
