--- a/package.xml
+++ b/package.xml
@@ -18,7 +18,7 @@
     <date>2007-07-02</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Test for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
+    <notes>New examples for creating Type3 fonts and postscript files in memory. Tests for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.10"/>
     </deps>
@@ -44,6 +44,13 @@
       <file role="doc" baseinstalldir="/" name="examples/rgb.png"/>
       <file role="doc" baseinstalldir="/" name="examples/gnu-head.jpg"/>
       <file role="doc" baseinstalldir="/" name="examples/picture.eps"/>
+      <file role="doc" baseinstalldir="/" name="rgb-alpha.png"/>
+      <file role="doc" baseinstalldir="/" name="debian.tiff"/>
+      <file role="doc" baseinstalldir="/" name="debian.bmp"/>
+      <file role="doc" baseinstalldir="/" name="interlaced.gif"/>
+      <file role="doc" baseinstalldir="/" name="debian-transparent.gif"/>
+      <file role="doc" baseinstalldir="/" name="debian.gif"/>
+      <file role="doc" baseinstalldir="/" name="cne-cmyk.jpg"/>
       <file role="doc" baseinstalldir="/" name="examples/Helvetica.afm"/>
       <file role="doc" baseinstalldir="/" name="examples/Helvetica.pro"/>
       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
@@ -53,6 +60,8 @@
       <file role="doc" baseinstalldir="/" name="examples/image.php"/>
       <file role="doc" baseinstalldir="/" name="examples/overprint.php"/>
       <file role="doc" baseinstalldir="/" name="examples/hyperlinks.php"/>
+      <file role="doc" baseinstalldir="/" name="examples/fontcreate.php"/>
+      <file role="doc" baseinstalldir="/" name="examples/memory.php"/>
       <file role="test" name="tests/001.phpt"/>
       <file role="test" name="tests/002.phpt"/>
       <file role="test" name="tests/003.phpt"/>
