--- a/package.xml
+++ b/package.xml
@@ -15,10 +15,10 @@
   </maintainers>
   <release>
     <version>1.3.5</version>
-    <date>2007-07-02</date>
+    <date>2007-07-06</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>New examples for creating Type3 fonts and postscript files in memory. Tests for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
+    <notes>New example to list all glyphs in a font. New examples for creating Type3 fonts and postscript files in memory. Tests for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.10"/>
     </deps>
@@ -55,6 +55,7 @@
       <file role="doc" baseinstalldir="/" name="examples/Helvetica.pro"/>
       <file role="doc" baseinstalldir="/" name="examples/hyph_en.dic"/>
       <file role="doc" baseinstalldir="/" name="examples/fontsample.php"/>
+      <file role="doc" baseinstalldir="/" name="examples/glyphlist.php"/>
       <file role="doc" baseinstalldir="/" name="examples/spotcolor.php"/>
       <file role="doc" baseinstalldir="/" name="examples/shading.php"/>
       <file role="doc" baseinstalldir="/" name="examples/image.php"/>
