- updated changelog and date of next release

--- a/package.xml
+++ b/package.xml
@@ -15,10 +15,10 @@
   </maintainers>
   <release>
     <version>1.3.5</version>
-    <date>2007-07-06</date>
+    <date>2007-07-12</date>
     <license>PHP License</license>
     <state>stable</state>
-    <notes>Reenable reading gd images. Added configuration file for win32. New example to list all glyphs in a font. New examples for creating Type3 fonts and postscript files in memory. Tests for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
+    <notes>Reenablee reading of gd images. Added configuration file for win32. New example to list all glyphs in a font. New examples for creating Type3 fonts and postscript files in memory. Tests for more image types in example/image.php. Added new functions to create Type3 fonts and to modify kerning and ligatures of an existing font. Added new function ps_glyph_name() and ps_glyph_show(). New function ps_include_file().</notes>
     <deps>
       <dep type="php" rel="ge" version="4.3.10"/>
     </deps>
