--- a/package.xml
+++ b/package.xml
@@ -14,18 +14,19 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>steinm@php.net</email>
   <active>yes</active>
  </lead>
- <date>2013-08-17</date>
- <time>07:51:29</time>
+ <date>2016-11-28</date>
+ <time>15:56:46</time>
  <version>
-  <release>1.3.7</release>
-  <api>1.3.7</api>
+  <release>1.4.0</release>
+  <api>1.4.0</api>
  </version>
  <stability>
   <release>stable</release>
   <api>stable</api>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
- <notes>no more crashes on 64 bit
+ <notes>
+support for php 7
  </notes>
  <contents>
   <dir name="/">
@@ -95,6 +96,21 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <configureoption name="with-ps" prompt="path to pslib installation?" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2013-08-17</date>
+   <time>07:51:29</time>
+   <version>
+    <release>1.3.7</release>
+    <api>1.3.7</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>no more crashes on 64 bit
+   </notes>
+	</release>
   <release>
    <date>2007-11-26</date>
    <time>20:21:14</time>
