--- a/package.xml
+++ b/package.xml
@@ -14,10 +14,10 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>steinm@php.net</email>
   <active>yes</active>
  </lead>
- <date>2017-07-31</date>
- <time>11:49:24</time>
+ <date>2021-09-25</date>
+ <time>19:03:18</time>
  <version>
-  <release>1.4.1</release>
+  <release>1.4.2</release>
   <api>1.4.0</api>
  </version>
  <stability>
@@ -26,7 +26,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD style</license>
  <notes>
-Change license to BSD style, fixed dependency on php
+added support for php8
  </notes>
  <contents>
   <dir name="/">
@@ -96,6 +96,22 @@ Change license to BSD style, fixed dependency on php
   <configureoption name="with-ps" prompt="path to pslib installation?" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2017-07-31</date>
+   <time>11:49:24</time>
+   <version>
+    <release>1.4.1</release>
+    <api>1.4.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD style</license>
+   <notes>
+Change license to BSD style, fixed dependency on php
+   </notes>
+	</release>
   <release>
    <date>2016-06-24</date>
    <time>18:21:28</time>
